site/_assets/sass/main.scss
@import "_base";

/* Space out content a bit */
body {
  padding-top: 20px;
}

img {
  max-width: 100%;
}

/* Make the masthead heading the same height as the navigation */
.header h1 {
  padding-bottom: 19px;
  margin-top: 0;
  margin-bottom: 0;
  line-height: 40px;

  a {
    color: $text-color;
    text-decoration: none;
  }
}

.nav > li > a {
  color: $text-color;
  &:hover, &:focus {
    background-color: #fff;
    color: $link-hover-color;
  }
}

.hero {
  background-color: #000;
  background-size: cover;
  height: 200px;
}

.posts li {
  padding-bottom: 15px;
}

.footer {
  margin-top: 150px;
  background-size: cover;
  padding: 25px;

  a {
    padding-left: 2px;
    padding-right: 2px;
  }
}

/* Customize container */
@media (min-width: 768px) {
  .container {
    max-width: 730px;
  }

  .portfolio img {
    margin-top: 25px;
  }
}

@media (min-width: 320px) {
  .date {
    display: block;
  }

  .header .nav {
    display: table;
    margin: 0 auto;
  }
}

@media print {
  body {
    color: #000;
    background: #fff;
    margin: 0;
    padding: 0;
    width: 100%;
  }

  img {
    page-break-inside: avoid;
  }

  .nav, .hero, .footer {
    display: none !important;
  }
}

